--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,9 @@
   --primary: green;
   --bg: #070000;
 }
-* {
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
