--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,3 +8,63 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+
+
+.navbar-toggler {
+  border: none;
+  font-size: 1.2rem;
+}
+
+.navbar-toggler:focus {
+  box-shadow: none;
+  outline: none;
+}
+
+.layanan,
+.paketlist,
+.cabin {
+  padding-top: 100px;
+}
+
+.home {
+  width: 100%;
+  height: 100vh;
+  text-align: center;
+  background-image: linear-gradient(
+      0deg,
+      rgb(255, 255, 255) 7%,
+      rgba(33, 167, 191, 0.171) 50%
+    ),
+    url("../img/home.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.home h1{
+  font-size: 3rem;
+  margin-top: 170px;
+}
+
+.card {
+  border: none;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 7px 15px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+}
+
+.card:hover {
+  transform: scale(1.01) translateY(-5px);
+}
+
+.card-sosial a {
+  font-size: 25px;
+  color: #fff;
+  background-color: black;
+  padding: 5px 10px;
+}
+
+.footer{
+  border-top: 1px solid #000;
+}
+
