--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@
       rgb(255, 255, 255) 7%,
       rgba(33, 167, 191, 0.171) 50%
     ),
-    url("../img/home.png");
+    url("../img/home2.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
